# ProductiveRobosLabBIBA

./: README.md
Moveables/UR10/: UR10_ToolFlange_meter.stl
binder/: Dockerfile  docker-compose.yml  entrypoint.sh  noetic.rosinstall
binder/me/: CMakeLists.txt  package.xml
launch/: Fanuc_Test.launch  OwnRobot.launch  robots.launch  test.launch
meshes/: Base.stl  CR35Fanuc_meter.stl  GoldbarrenPart1.stl  GoldbarrenPart1_Ascii.stl  GoldbarrenPart1_cm.stl  GoldbarrenPart1_meter.stl  Stehtisch_meter.stl  UR10_Tisch.stl  UR10_ToolFlange_meter.stl  UR10_WorkBench.stl  Upper arm.stl
meshes/00_BasicSamples/: simple_cube.dae
meshes/CR35ia/: cr35ia.urdf
meshes/Fences/: Fences.urdf  PartitionWall_1800x790.stl  PartitionWall_2100x790.stl  SafetyFence_2000x2100.stl
meshes/Grippers/: OnrobotRG2.urdf
meshes/R2000ib210f/: r2000ib210f.urdf
meshes/UR10/: ur10.urdf
myObjects/: myObject1.test  package.xml
myObjects/urdf/: table.xacro
my_robot_description/: CMakeList.txt  CMakeLists.txt
notebooks/: Available_Equipment&Unmovables.ipynb  Avialable_Demonstrators&Scenarios.ipynb  Avialable_Robots&Movables.ipynb  Fanuc_Test_Targets.ipynb  OwnRobot.ipynb  OwnRobot.launch  TestDemoRun.ipynb  TestTwoTargets.ipynb  URDF_samples.ipynb  URDF_samples1.ipynb  URDF_samples2ipynb  URDFcreate.ipynb  URDFhelper.ipynb  UR_Launch.ipynb  helper.py  robots.ipynb  turtlesim.ipynb
rviz/: config.rviz  rviz-config.json
urdf/: 05-visual.urdf  06-flexible.urdf  09-simple_cube.urdf  10-osaca2.urdf  11-PatrickA.urdf  12-PatrickB.urdf  13-PatrickC.urdf  14-PatrickD.urdf
(+39 files in other folders)
